--- a/src/app/features/contacts/components/search/search.component.html
+++ b/src/app/features/contacts/components/search/search.component.html
@@ -30,10 +30,11 @@
     <ion-label> Ergebnisse </ion-label>
   </ion-item-divider>
   <ion-list>
-    <ng-container *ngIf="contacts$ |async as contacts">
-      <app-user *ngFor="let user of users | async"
+    <ng-container>
+      <app-user
+        *ngFor="let user of users | async"
         [user]="user"
-        [includes]="contacts && contacts.includes(user.uid)"
+        [includes]="includes(user.id) | async"
       ></app-user>
     </ng-container>
   </ion-list>
