--- a/src/app/features/sign-in/sign-in.page.html
+++ b/src/app/features/sign-in/sign-in.page.html
@@ -40,7 +40,7 @@
         </ion-row>
         <ion-row>
           <ion-col style="text-align: end">
-            <ion-router-link href="forgot-password"
+            <ion-router-link routerLink="forgot-password"
               >Passwort vergessen?</ion-router-link
             >
           </ion-col>
@@ -61,7 +61,7 @@
         </ion-row>
         <ion-row>
           <ion-col>
-            <ion-button type="button" [routerLink]="'sign-up'" expand="block"
+            <ion-button type="button" routerLink="sign-up" expand="block"
               >Registrieren</ion-button
             >
           </ion-col>
