--- a/src/app/features/chats/components/chat-footer/chat-footer.component.scss
+++ b/src/app/features/chats/components/chat-footer/chat-footer.component.scss
@@ -2,6 +2,14 @@
   display: flex;
   padding: 4px 8px;
   gap: 8px;
+
+  --border-color: var(--ion-background-color);
+  
+  & ion-input {
+    --border-width: 0;
+
+    --border-color: var(--ion-background-color);
+  }
   & > ion-button::part(native) {
     padding: 2px;
     border-radius: 50%;
