--- a/src/global.scss
+++ b/src/global.scss
@@ -31,6 +31,7 @@
   flex-direction: column;
   padding: 16px 0;
   min-height: 100%;
+  background: var(--ion-background-color);
   & > *:first-child {
     margin-top: auto;
   }
@@ -41,4 +42,3 @@
   padding: 4px 8px;
   background: rgba(var(--ion-color-medium-rgb), 0.1);
 }
-
