--- a/src/app/features/chats/chats.page.html
+++ b/src/app/features/chats/chats.page.html
@@ -5,28 +5,21 @@
 </ion-header>
 
 <ion-content>
-  <ng-container *ngIf="chats$ | async as chats">
-    <ion-list *ngFor="let chat of chats">
-      <ion-item
-        *ngIf="chat.userRef | doc | async as user"
-        [routerLink]="'/chats/' + user.uid"
+  <ion-list *ngIf="chats$ | async as chats">
+    <ion-item *ngFor="let chat of chats" [routerLink]="'/chats/' + chat.id">
+      <ion-avatar class="">
+        <img [src]="chat" />
+      </ion-avatar>
+      <div class="ion-margin-start">
+        <h2 style="margin: 0 0 8px">{{chat.displayName}}</h2>
+        <p style="margin: 0">
+          {{chat.lastMessage.text | decrypt | async}} {{
+          chat.lastMessage.createdAt | time }}
+        </p>
+      </div>
+      <ion-note *ngIf="chat.unread" slot="end"
+        ><ion-badge color="primary">{{chat.unread}}</ion-badge></ion-note
       >
-        <ion-avatar class="">
-          <img [src]="user | photoUrl" />
-        </ion-avatar>
-        <div class="ion-margin-start">
-          <h2 style="margin: 0 0 8px">{{user.displayName}}</h2>
-          <p
-            style="margin: 0"
-            *ngIf="chat.lastMessageRef | doc | async as lastMessage"
-          >
-            {{lastMessage | decrypt | async}} {{ lastMessage.createdAt | time }}
-          </p>
-        </div>
-        <ion-note *ngIf="chat.unread" slot="end"
-          ><ion-badge color="primary">{{chat.unread}}</ion-badge></ion-note
-        >
-      </ion-item>
-    </ion-list>
-  </ng-container>
+    </ion-item>
+  </ion-list>
 </ion-content>
