--- a/src/app/features/chats/components/chat-message/chat-message.component.html
+++ b/src/app/features/chats/components/chat-message/chat-message.component.html
@@ -1,23 +1,19 @@
-<ng-container *ngIf="message">
-  <ion-item class="chat-message" id="{{ message.id }}">
-    <div
-      [ngClass]="{
-        own: receiverId === message.receiverId
-      }"
-    >
-      <div class="name" *ngIf="message.groupId">
-        <ng-container *ngIf="message.senderId | doc | async as sender">
-          {{ sender.displayName }}
-        </ng-container>
-      </div>
-      <p class="text">
-        {{ message | decrypt | async }}
-      </p>
-      <ng-container *ngIf="message.createdAt && message.createdAt.toDate">
-        <div class="time">
-          {{ message.createdAt | time }}
-        </div>
+<ion-item *ngIf="message" class="chat-message" [id]="message.id">
+  <div
+    [ngClass]="{
+      own: receiverId === message.receiverId
+    }"
+  >
+    <div class="name" *ngIf="message.groupId">
+      <ng-container *ngIf="message.senderId | doc | async as sender">
+        {{ sender.displayName }}
       </ng-container>
     </div>
-  </ion-item>
-</ng-container>
+    <p class="text">
+      {{ message.text | decrypt | async }}
+    </p>
+    <div class="time" *ngIf="message.createdAt && message.createdAt.toDate">
+      {{ message.createdAt | time }}
+    </div>
+  </div>
+</ion-item>
