--- a/src/app/features/chats/components/chat-message/chat-message.component.scss
+++ b/src/app/features/chats/components/chat-message/chat-message.component.scss
@@ -1,27 +1,24 @@
 .chat-message {
- 
-
+  --background: var(--ion-background-color);
+  --border-color: var(--ion-background-color);
   & .own {
     justify-content: flex-end;
-    & > div {
-      background-color: var(--ion-color-primary);
-      &::before {
-        border-bottom-left-radius: 0.8rem 0.7rem;
-        border-right: 1rem solid var(--ion-color-primary);
-        right: -0.35rem;
-        transform: translate(0, -0.1rem);
-        z-index: -1;
-      }
-      &::after {
-        background-color: var(--ion-background-color);
-        border-bottom-left-radius: 0.5rem;
-        right: -40px;
-        transform: translate(-30px, -2px);
-        width: 10px;
-      }
+    background-color: var(--ion-color-primary);
+    &::before {
+      border-bottom-left-radius: 0.8rem 0.7rem;
+      border-right: 1rem solid var(--ion-color-primary);
+      right: -0.35rem;
+      transform: translate(0, -0.1rem);
+      z-index: -1;
     }
-  }
-  & > div {
+    &::after {
+      background-color: var(--ion-background-color);
+      border-bottom-left-radius: 0.5rem;
+      right: -40px;
+      transform: translate(-30px, -2px);
+      width: 10px;
+    }
+
     flex-shrink: 1;
     flex-grow: 0;
     background-color: var(--ion-color-medium);
