--- a/src/app/features/chats/pages/single-chat/single-chat.page.html
+++ b/src/app/features/chats/pages/single-chat/single-chat.page.html
@@ -10,36 +10,15 @@
 
 <ion-content>
   <ion-list class="message-container">
-    <ng-container *ngIf="messageRefs$ | async as messageRefs">
-      <ng-container *ngFor="let messageRef of messageRefs">
-        <app-chat-message
-          *ngIf="messageRef | doc | async as message"
-          [message]="message"
-          [receiverId]="receiverId"
-          id="{{message.guid}}"
-        ></app-chat-message>
-      </ng-container>
-    </ng-container>
-    <ng-container *ngIf="unreadMessageRefs$ | async as unreadMessageRefs">
-      <ng-container *ngIf=" unreadMessageRefs && unreadMessageRefs.length > 0">
-        <ion-item class="unread">
+    <app-chat-message
+      *ngFor="let message of message$ | async"
+      [message]="message"
+      [receiverId]="receiverId"
+      [id]="message.id"
+    ></app-chat-message>
+    <!-- <ion-item class="unread">
           {{unreadMessageRefs.length}} ungelesene Nachrichten
-        </ion-item>
-        <ng-container *ngFor="let unreadMessageRef of unreadMessageRefs">
-          <ng-container *ngIf="unreadMessageRef | doc | async as unreadMessage">
-            <app-chat-message
-              *ngIf="unreadMessageRef | doc | async as unreadMessage"
-              appObserveVisibility
-              [debounceTime]="300"
-              (visible)="onVisible($event)"
-              [message]="unreadMessage"
-              [receiverId]="receiverId"
-              id="{{unreadMessage.guid}}"
-            ></app-chat-message>
-          </ng-container>
-        </ng-container>
-      </ng-container>
-    </ng-container>
+        </ion-item> -->
   </ion-list>
 </ion-content>
 
