--- a/src/app/features/contacts/contacts.page.html
+++ b/src/app/features/contacts/contacts.page.html
@@ -7,27 +7,13 @@
       ></ion-button>
     </ion-buttons>
   </ion-toolbar>
+  <ion-toolbar>
+    <ion-input></ion-input>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ng-container *ngIf="privateData$ | async as privateData">
-      <ng-container *ngFor="let uid of privateData.contactRefs">
-        <ng-container *ngIf="uid | doc | async as contact">
-          <ion-item [routerLink]="'/chats/' + contact.uid">
-            <ion-avatar slot="start">
-              <ion-img
-                [src]="contact | photoUrl"
-                alt="profile-picture"
-              ></ion-img>
-            </ion-avatar>
-            <ion-label>
-              <h2>{{ contact.displayName }} [{{ contact.email }}]</h2>
-              <p>{{ contact.description }}</p>
-            </ion-label>
-          </ion-item>
-        </ng-container>
-      </ng-container>
-    </ng-container>
+    <app-contact *ngFor="let contact of contacts$ | async" [contact]=" contact.id | user | async"></app-contact>
   </ion-list>
 </ion-content>
