--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,38 +1,38 @@
 <ion-tabs>
-    <ion-tab-bar slot="bottom" *ngIf="showNav">
-      <ng-container *ngIf="isLoggedIn && isVerified">
-        <ion-tab-button tab="contacts">
-          <ion-icon name="person"></ion-icon>
-          <ion-label>Kontakte</ion-label>
-        </ion-tab-button>
-        <ion-tab-button tab="chats">
-          <ion-icon name="chatbubbles"></ion-icon>
-          <ion-label>Chats</ion-label>
-        </ion-tab-button>
-        <ion-tab-button tab="settings">
-          <ion-icon name="settings"></ion-icon>
-          <ion-label>Einstellungen</ion-label>
-        </ion-tab-button>
-      </ng-container>
-      <ng-container *ngIf="!isLoggedIn">
-        <ion-tab-button tab="sign-in">
-          <ion-icon name="person"></ion-icon>
-          <ion-label>Login</ion-label>
-        </ion-tab-button>
-        <ion-tab-button tab="sign-up">
-          <ion-icon name="add"></ion-icon>
-          <ion-label>Registrieren</ion-label>
-        </ion-tab-button>
-      </ng-container>
-      <ng-container *ngIf="!isVerified && isLoggedIn">
-        <ion-tab-button tab="verify-email">
-          <ion-icon name="mail"></ion-icon>
-          <ion-label>E-Mail verifizieren</ion-label>
-        </ion-tab-button>
-        <ion-tab-button tab="sign-out">
-          <ion-icon name="log-out"></ion-icon>
-          <ion-label>Ausloggen</ion-label>
-        </ion-tab-button>
-      </ng-container>
-    </ion-tab-bar>
+  <ion-tab-bar slot="bottom" *ngIf="showNav">
+    <ng-container *ngIf="isLoggedIn && isVerified">
+      <ion-tab-button tab="contacts">
+        <ion-icon name="person"></ion-icon>
+        <ion-label>Contacts</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="chats">
+        <ion-icon name="chatbubbles"></ion-icon>
+        <ion-label>Chats</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="settings">
+        <ion-icon name="settings"></ion-icon>
+        <ion-label>Settings</ion-label>
+      </ion-tab-button>
+    </ng-container>
+    <ng-container *ngIf="!isLoggedIn">
+      <ion-tab-button tab="sign-in">
+        <ion-icon name="person"></ion-icon>
+        <ion-label>Sign In</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="sign-up">
+        <ion-icon name="add"></ion-icon>
+        <ion-label>Sign Up</ion-label>
+      </ion-tab-button>
+    </ng-container>
+    <ng-container *ngIf="!isVerified && isLoggedIn">
+      <ion-tab-button tab="verify-email">
+        <ion-icon name="mail"></ion-icon>
+        <ion-label>Verify your email</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="sign-out">
+        <ion-icon name="log-out"></ion-icon>
+        <ion-label>Sign Out</ion-label>
+      </ion-tab-button>
+    </ng-container>
+  </ion-tab-bar>
 </ion-tabs>
