--- a/src/app/features/chats/chats.page.html
+++ b/src/app/features/chats/chats.page.html
@@ -1,10 +1,27 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>chats</ion-title>
+    <ion-title>Your Chats</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="openCreateGroupChat()"
+        ><ion-icon name="add" slot="icon-only"></ion-icon
+      ></ion-button>
+    </ion-buttons>
   </ion-toolbar>
+  <ion-toolbar
+    style="z-index: 0"
+    appScrollHide
+    [scrollHide]="headerScrollConfig"
+    [scrollContent]="pageContent"
+    ><ion-searchbar
+      placeholder="mail or name"
+      animated
+      (ionChange)="onSearch($event)"
+      debounce="500"
+    ></ion-searchbar
+  ></ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content #pageContent>
   <ion-list *ngIf="chats$ | async as chats">
     <ion-item *ngFor="let chat of chats" [routerLink]="'/chats/' + chat.id">
       <ion-avatar class="">
@@ -21,5 +38,45 @@
         ><ion-badge color="primary">{{chat.unread}}</ion-badge></ion-note
       >
     </ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
+    <ion-item>TEst</ion-item>
   </ion-list>
 </ion-content>
