--- a/src/app/features/chats/components/create-group/create-group.component.html
+++ b/src/app/features/chats/components/create-group/create-group.component.html
@@ -1,6 +1,6 @@
 <ion-header translucent>
   <ion-toolbar>
-    <ion-title>Add Contacts</ion-title>
+    <ion-title>Create Group</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="dismissModal()"
         ><ion-icon name="close" slot="icon-only"></ion-icon
@@ -24,18 +24,18 @@
       <ion-label position="floating" floating
         >Email, Phonenumber or Id</ion-label
       >
-      <ion-input type="text" [(ngModel)]="search" name="saerch"></ion-input>
+      <!-- <ion-input type="text" [(ngModel)]="search" name="saerch"></ion-input> -->
     </ion-item>
     <ion-button type="submit" expand="block">Search</ion-button>
   </form>
   <ion-item-divider color="secondary">
     <ion-label>Results</ion-label>
   </ion-item-divider>
-  <ion-list *ngIf="users$ | async as users">
+  <!-- <ion-list *ngIf="users$ | async as users">
     <app-contacts-add-search-result
       *ngFor="let user of users"
       [user]="user"
       [includes]="user.id | hasContact | async"
     ></app-contacts-add-search-result>
-  </ion-list>
+  </ion-list> -->
 </ion-content>
