--- a/src/app/features/contacts/components/contact/contact.component.html
+++ b/src/app/features/contacts/components/contact/contact.component.html
@@ -1,9 +1,14 @@
-<ion-item *ngIf="contact" [routerLink]="'/chats/' + contact.id">
-  <ion-avatar slot="start">
-    <ion-img [src]="contact | photoUrl" alt="profile-picture"></ion-img>
-  </ion-avatar>
-  <ion-label>
-    <h2>{{ contact.displayName }} [{{ contact.email }}]</h2>
-    <p>{{ contact.description }}</p>
-  </ion-label>
-</ion-item>
+<ion-item-sliding>
+  <ion-item *ngIf="contact" [routerLink]="'/chats/' + contact.id">
+    <ion-avatar slot="start">
+      <ion-img [src]="contact | photoUrl" alt="profile-picture"></ion-img>
+    </ion-avatar>
+    <ion-label>
+      <h2>{{ contact.displayName }} [{{ contact.email }}]</h2>
+      <p>{{ contact.description }}</p>
+    </ion-label>
+  </ion-item>
+  <ion-item-options side="end">
+    <ion-item-option color="danger">Delete</ion-item-option>
+  </ion-item-options>
+</ion-item-sliding>
