contacts page finished, wip group create form

--- a/src/app/features/chats/chats.page.html
+++ b/src/app/features/chats/chats.page.html
@@ -17,6 +17,7 @@
       animated
       (ionChange)="onSearch($event)"
       debounce="500"
+      class="my-searchbar"
     ></ion-searchbar
   ></ion-toolbar>
 </ion-header>
