--- a/src/app/features/contacts/components/contact/contact.component.html
+++ b/src/app/features/contacts/components/contact/contact.component.html
@@ -9,6 +9,6 @@
     </ion-label>
   </ion-item>
   <ion-item-options side="end">
-    <ion-item-option color="danger">Delete</ion-item-option>
+    <ion-item-option color="danger" (click)="delete()">Delete</ion-item-option>
   </ion-item-options>
 </ion-item-sliding>
