--- a/src/app/features/settings/settings.page.html
+++ b/src/app/features/settings/settings.page.html
@@ -25,7 +25,7 @@
   <ion-list>
     <ion-item lines="full" [routerLink]="'/settings/profile'">
       <ion-label> Profil bearbeiten </ion-label>
-      <ion-icon slot="end" name="chevron-forward"></ion-icon>
+      <ion-icon slot="end" name="chevron-forward ios-hide"></ion-icon>
     </ion-item>
     <ion-item lines="full">
       <ion-icon slot="start" name="moon"></ion-icon>
