added remove token

--- a/src/app/features/settings/settings.page.html
+++ b/src/app/features/settings/settings.page.html
@@ -42,6 +42,13 @@
     >Get Token</ion-button
   >
   <ion-button
+    (click)="deleteToken()"
+    color="danger"
+    expand="block"
+    style="margin-top: 2rem"
+    >Delete Token</ion-button
+  >
+  <ion-button
     (click)="signOut()"
     color="danger"
     expand="block"
