--- a/src/app/features/contacts/components/contact/contact.component.html
+++ b/src/app/features/contacts/components/contact/contact.component.html
@@ -1,7 +1,10 @@
 <ion-item-sliding>
   <ion-item *ngIf="contact" [routerLink]="'/chats/' + contact.id">
     <ion-avatar slot="start">
-      <ion-img [src]="contact | photoUrl" alt="profile-picture"></ion-img>
+      <ion-img
+        [src]="contact | photoUrl: contact.email"
+        alt="profile-picture"
+      ></ion-img>
     </ion-avatar>
     <ion-label>
       <h2>{{ contact.displayName }} [{{ contact.email }}]</h2>
