wip chat appearence, send msg with cloud function

--- a/src/app/features/chats/components/chat-message/chat-message.component.html
+++ b/src/app/features/chats/components/chat-message/chat-message.component.html
@@ -1,4 +1,4 @@
-<ion-item *ngIf="message" class="chat-message" [id]="message.id">
+<div *ngIf="message" class="chat-message" [id]="message.id">
   <div
     [ngClass]="{
       own: receiverId === message.receiverId
@@ -16,4 +16,4 @@
       {{ message.createdAt | time }}
     </div>
   </div>
-</ion-item>
+</div>
