--- a/src/app/features/chats/components/chat-message/chat-message.component.scss
+++ b/src/app/features/chats/components/chat-message/chat-message.component.scss
@@ -1,12 +1,12 @@
 .chat-message {
   --background: var(--ion-background-color);
   --border-color: var(--ion-background-color);
-  & .own {
-    justify-content: flex-end;
-    background-color: var(--ion-color-primary);
+  --elem-color: var(--ion-color-medium);
+  display: flex;
+  & > div {
     &::before {
       border-bottom-left-radius: 0.8rem 0.7rem;
-      border-right: 1rem solid var(--ion-color-primary);
+      border-right: 1rem solid var(--elem-color);
       right: -0.35rem;
       transform: translate(0, -0.1rem);
       z-index: -1;
@@ -21,7 +21,7 @@
 
     flex-shrink: 1;
     flex-grow: 0;
-    background-color: var(--ion-color-medium);
+    background-color: var(--elem-color);
     color: white;
     padding: 8px;
     margin-right: 8px;
@@ -35,7 +35,6 @@
       content: "";
       height: 1rem;
       position: absolute;
-      background-color: var(--ion-color-medium);
     }
 
     & .text {
@@ -46,6 +45,12 @@
     & .time {
       font-size: 10px;
       text-align: right;
+    }
+
+    &.own {
+      justify-content: flex-end;
+      margin-left: auto;
+      --elem-color: var(--ion-color-primary);
     }
   }
 }
