--- a/src/global.scss
+++ b/src/global.scss
@@ -51,7 +51,9 @@
 }
 
 .firebase-emulator-warning {
-  display: none;
+  // display: none;
+  opacity: 0.1;
+  pointer-events: none;
 }
 
 .ios ios-hide {
